--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
         "dompdf/dompdf": "dev-master",
         "voceconnect/wp-dependencies": "~0.1"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "files": ["voce-post-pdfs.php"]
+    }
 }
