--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "voceconnect/voce-post-pdfs",
     "description": "Generates PDF's from Posts",
     "authors": [],
-    "type": "wp-plugin",
+    "type": "wordpress-plugin",
     "license": "GPLv2+",
     "require": {
         "dompdf/dompdf": "^1.0"
